<resources>
    <string name="app_name">NewsNow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="login">Iniciar Sesión</string>
    <string name="register">Registrarse</string>
    <string name="logo">Logo de la App</string>
    <string name="email">Correo Electrónico</string>
    <string name="confirm_password">Confirmar Contraseña</string>
</resources>